created img folder

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <div class="profile_name">
           Abin Augustine
           <div class="contact_info">
-            <img src="gmail.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
+            <img src="img/gmail.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
           abinaugustine1010@gmail.com
         </div>
         <div style="clear:both;"></div>
         <div class="contact_info">
-          <img src="telephone.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
+          <img src="img/telephone.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
           +91 9778023118
 
         </div>
@@ -58,37 +58,37 @@
 
       <div class="all_skills">
         <div class="skill">
-          <img src="html.png"/>
+          <img src="img/html.png"/>
           <h6>HTML</h6>
           <p>3 years experience</p>
         </div>  
 
         <div class="skill">
-          <img src="java-script.png"/>
+          <img src="img/java-script.png"/>
           <h6>JavaScript</h6>
           <p>3 years experience</p>
         </div> 
         
         <div class="skill">
-            <img src="css-3.png"/>
+            <img src="img/css-3.png"/>
             <h6>CSS</h6>
             <p>2 years experience</p>
           </div>
 
           <div class="skill">
-            <img src="c-.png"/>
+            <img src="img/c-.png"/>
             <h6>C/C++</h6>
             <p>4 years experience</p>
           </div>
         
           <div class="skill">
-            <img src="database-storage.png"/>
+            <img src="img/database-storage.png"/>
             <h6>Database</h6>
             <p>3 years experience</p>
           </div>
 
           <div class="skill">
-            <img src="java.png"/>
+            <img src="img/java.png"/>
             <h6>Java</h6>
             <p>2 years experience</p>
           </div>
