--- a/contacts.html
+++ b/contacts.html
@@ -18,37 +18,37 @@
     <br><br><br>
 
     <div class="contact_info" style: padding:10px>
-        <img src="gmail.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
+        <img src="img/gmail.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
       abinaugustine1010@gmail.com
     </div>
       <br>
     <div style="clear:both;"></div>
     <div class="contact_info">
-      <img src="telephone.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
+      <img src="img/telephone.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
       +91 9778023118
 
     </div><br>
     <div style="clear:both;"></div>
     <div class="contact_info">
-      <img src="linkedin.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
+      <img src="img/linkedin.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
       <a href="https://www.linkedin.com/in/abinaugustine/">Abin Augustine</a>
 
     </div>
     <br>
     <div class="contact_info">
-        <img src="github.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
+        <img src="img/github.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
         <a href="https://github.com/Abin-Augustine1010">Abin-Augustine1010</a>
   
     </div><br>
     
     <div class="contact_info">
-        <img src="instagram.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
+        <img src="img/instagram.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
         <a href="https://instagram.com/abin.augustine.7781?igshid=YmMyMTA2M2Y=">abin.augustine.7781</a>
   
     </div>
       <br>
     <div class="contact_info">
-        <img src="facebook.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
+        <img src="img/facebook.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
         <a href="https://www.facebook.com/abin.augustine.735">Abin Augustine</a>
   
 </div>
